--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+/* all styles */
 *{
     margin: 0;
     padding: 0;
@@ -15,12 +16,33 @@ section{
     justify-content: center;
     align-items: center;
 }
-/* tile 1 */
+/* section 1 */
 .fill-1{
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: darkmagenta;
 }
 .button-1{
-    height: 40px;
-    width: 120px;
+    border-radius: 1rem;
+    border: 4px solid rgb(129, 173, 41);
+    background-color: yellowgreen;
+    height: 80px;
+    width: 240px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.2s;
+    cursor: pointer;
+    user-select: none;
+}
+.button-1:hover {
+    background-color: rgb(129, 173, 41);
+}
+.button-text-1{
+    font-weight: 700;
+    font-size: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
