--- a/main.css
+++ b/main.css
@@ -110,3 +110,94 @@ section{
     left: calc(50% - 325px);
     transform: translate(-50%, -50%) rotate(-90deg);
   }
+
+  /* section 3 */
+
+  .fill-3{
+    width: 100%;
+    height: 100%;
+    background-color: var(--pink);
+    position: relative;
+  }
+  .display-3{
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    font-weight: 700;
+    font-size: 4rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transform: translate(-50%, -50%);
+    color: var(--yellow);
+  }
+  .main-button-3{
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 1rem;
+    background-color: var(--yellow);
+    height: 80px;
+    width: 240px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.2s;
+    cursor: pointer;
+    user-select: none;
+    font-weight: 700;
+    font-size: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  .main-button-3:hover{
+    background-color: var(--orange);
+  }
+  /* .button-wraper-3{
+    width: 360px;
+    height: 90px;
+    position: absolute;
+    top: 10%;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    user-select: none;
+  }
+  .button-wraper-3-on{
+    opacity: 1;
+    user-select: auto;
+  }
+  .multiplier-3{
+    height: 80px;
+    width: 60px;
+    font-weight: 700;
+    font-size: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--yellow);
+  }
+.button-3{
+    border-radius: 1rem;
+    background-color: var(--yellow);
+    height: 80px;
+    width: 240px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.2s;
+    cursor: pointer;
+    user-select: none;
+    font-weight: 700;
+    font-size: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.button-3:hover{
+    background-color: var(--orange);
+}
+.price-3{
+    height: 80px;
+    width: 60px;
+    font-weight: 700;
+    font-size: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--yellow);
+} */
