--- a/main.css
+++ b/main.css
@@ -152,12 +152,18 @@ section{
   .main-button-3:hover{
     background-color: var(--orange);
   }
-  .button-wraper-3{
-    width: 360px;
-    height: 90px;
+  .buttons-wraper-3{
     position: absolute;
     top: 10%;
     left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .button-wraper-3{
+    width: 360px;
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,11 +176,17 @@ section{
   }
   .multiplier-3{
     height: 80px;
-    width: 60px;
+    width: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: 700;
     font-size: 2rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: var(--yellow);
+  }
+  .multiplier-3-on::after{
+    content: "x";
   }
 .button-3{
     border-radius: 1rem;
