--- a/main.css
+++ b/main.css
@@ -215,3 +215,40 @@ section{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: var(--yellow);
 }
+
+/* section 4 */
+
+.fill-4{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column-reverse;
+  background-color: var(--dark);
+}
+.button-4{
+    border-radius: 1rem;
+    background-color: var(--dark-blue);
+    color: var(--yellow);
+    height: 80px;
+    width: 240px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.2s;
+    cursor: pointer;
+    user-select: none;
+    font-weight: 700;
+    font-size: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 1rem;
+}
+.button-4:hover{
+  background-color: var(--pink  );
+}
+.shape-4{
+  width: 500px;
+  height: 500px;
+  background-color: var(--pink);
+}
