--- a/main.css
+++ b/main.css
@@ -252,3 +252,74 @@ section{
   height: 500px;
   background-color: var(--pink);
 }
+
+/* section 5 */
+
+.fill-5{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: var(--yellow);
+}
+.square-5{
+  width: 500px;
+  height: 500px;
+  background-color: rgb(127, 127, 127);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid #000;
+}
+.display-5{
+  width: 500px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 88%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 700;
+  color: var(--dark-blue);
+}
+.slider-wraper-5{
+  height: 500px;
+  width: 500px;
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.slider-5{
+  appearance: none;
+  -webkit-appearance: none;
+  width: 500px;
+  height: 10px;
+  border-radius: 5px;  
+  background: var(--dark-blue);
+  outline: none;
+}
+.slider-5::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%; 
+  background: var(--dark-blue);
+  cursor: pointer;
+}
+.slider-5::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--dark-blue);
+  cursor: pointer;
+}
