--- a/main.css
+++ b/main.css
@@ -269,7 +269,7 @@ section{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 5px solid #000;
+  border-radius: 100%;
 }
 .display-5{
   width: 500px;
@@ -321,5 +321,58 @@ section{
   height: 20px;
   border-radius: 50%;
   background: var(--dark-blue);
+  cursor: pointer;
+}
+
+/* section 6 */
+
+.fill-6{
+  width: 100%;
+  height: 100%;
+  background-color: var(--dark-blue);
+  position: relative;
+}
+.div-6{
+  width: 500px;
+  height: 500px;
+  background-color: var(--yellow);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  color: var(--pink);
+  font-size: 2rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.slider-6{
+  appearance: none;
+  -webkit-appearance: none;
+  width: 500px;
+  height: 10px;
+  border-radius: 5px;  
+  background: var(--yellow);
+  outline: none;
+  position: absolute;
+  top: 50%;
+  left: 5%;
+}
+.slider-6::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%; 
+  background: var(--yellow);
+  cursor: pointer;
+}
+.slider-6::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--yellow);
   cursor: pointer;
 }
