--- a/main.css
+++ b/main.css
@@ -462,6 +462,9 @@ section{
   font-weight: 700;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: var(--dark);
+  transition: 0.5s;
+  perspective: 1000px;
+  perspective-origin: 50% 50%;
 }
 .button-8{
   width: 240px;
