--- a/main.css
+++ b/main.css
@@ -463,6 +463,8 @@ section{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: var(--dark);
   transition: 0.5s;
+  perspective: 1000px;
+  perspective-origin: 50% 50%;
 }
 .button-8{
   width: 240px;
@@ -484,52 +486,4 @@ section{
 .button-8:hover{
   background-color: var(--dark);
   color: var(--orange);
-}
-
-/* section 9 */
-
-.fill-9{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-color: var(--dark);
-}
-.input-9{
-  width: 500px;
-  height: 70px;
-  background-color: var(--yellow);
-  color: var(--dark);
-  border: none;
-  outline: none;
-  border-radius: 1rem;
-  padding: 0.5rem;
-  font-size: 1.5rem;
-  font-weight: 700;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.input-9::placeholder{
-  color: var(--dark);
-}
-.button-9{
-  width: 240px;
-  height: 80px;
-  border-radius: 1rem;
-  background-color: var(--yellow);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--dark);
-  transition: 0.2s;
-  font-size: 2rem;
-  font-weight: 700;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  cursor: pointer;
-  user-select: none;
-  margin-top: 3rem;
-}
-.button-9:hover{
-  background-color: var(--orange);
 }
