--- a/main.css
+++ b/main.css
@@ -533,3 +533,71 @@ section{
 .button-9:hover{
   background-color: var(--orange);
 }
+
+/* section 10 */
+
+.fill-10{
+  width: 100%;
+  height: 100%;
+  background-color: var(--pink);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.input-10{
+  width: 240px;
+  height: 80px;
+  background-color: var(--yellow);
+  color: var(--pink);
+  border: none;
+  outline: none;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-bottom: 3rem;
+}
+.input-10::placeholder{
+  color: var(--pink);
+}
+.input-10::-webkit-outer-spin-button,
+.input-10::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+.input-10[type=number] {
+  appearance: textfiled;
+  -moz-appearance: textfield;
+}
+.button-10{
+  width: 240px;
+  height: 80px;
+  border-radius: 1rem;
+  background-color: var(--yellow);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--pink);
+  transition: 0.2s;
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer;
+  user-select: none;
+  margin-bottom: 3rem;
+}
+.button-10:hover{
+  background-color: var(--orange);
+}
+.display-10{
+  width: 800px;
+  height: 80px;
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--yellow);
+}
