--- a/main.css
+++ b/main.css
@@ -644,3 +644,51 @@ section{
 .button-11:hover{
   background-color: var(--pink);
 }
+
+/* section 12 */
+
+.fill-12{
+  width: 100%;
+  height: 100%;
+  background-color: var(--dark-blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.input-12{
+  width: 500px;
+  height: 70px;
+  background-color: var(--yellow);
+  color: var(--pink);
+  border: none;
+  outline: none;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.input-12::placeholder{
+  color: var(--pink);
+}
+.button-12{
+  width: 240px;
+  height: 80px;
+  border-radius: 1rem;
+  background-color: var(--yellow);  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--pink);
+  transition: 0.2s;
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer;
+  user-select: none;
+  margin-top: 3rem;
+}
+.button-12:hover{
+  background-color: var(--orange);
+}
